--- a/html/points.html
+++ b/html/points.html
@@ -116,7 +116,7 @@
               <div class="col-12">
                 <label for="">Zone</label>
                 <br>
-                <select name="" class="form-control" id="jcomboboxZone">
+                <select name="" class="form-control selectZones" id="jcomboboxZone">
 
                 </select>
               </div>
@@ -125,7 +125,7 @@
               <div class="col-12">
                 <button class="btn btn-custom bg-main-color pull-right" id="btnPointsData">View</button>
                 <button class="btn btn-custom bg-main-color pull-right" id="btnMapAllPoints">Map</button>
-                <button class="btn btn-custom bg-main-color pull-right" id="btnInsertPoint">Insert</button>
+                <button class="btn btn-custom bg-main-color pull-right" id="btnShowInsertPointModal">Insert</button>
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
       </div>
     </div>
 
-    <!-- nodal all points map -->
+    <!-- modal all points map -->
     <div class="row">
       <div class="col-12">
         <div class="modal fade bd-example-modal-lg" id="modalMapPoint">
@@ -236,11 +236,18 @@
                         <input type="text" class="form-control" placeholder="Point code" id="txtInsertPointCode">
                       </div>
                       <div class="form-group">
+                        <label for="">GPS</label>
+                        <input type="radio" name="radioGPS" value="GPS">
+                        <label for="">QRCode</label>
+                        <input type="radio" name="radioGPS" value="QRCode">
+                      </div>
+                      <div class="form-group">
                           <label for="" class="font-weight-bold">Zone</label>
-                          <select id="selectZoneInsertPoint" class="form-control">
-                            <option value=""></option>
+                          <select id="selectZoneInsertPoint" class="form-control selectZones">
+
                           </select>
                       </div>
+
                       <div>
                         <label for="" class="font-weight-bold">Lat: </label>
                         <span id="latInsertPoint" class="latPoint"></span>
@@ -254,6 +261,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
+                <button class="btn btn-custom bg-main-color" id="btnInsertPoint">Save</button>
               </div>
             </div>
           </div>
