send message guard completed

--- a/html/route.html
+++ b/html/route.html
@@ -32,7 +32,7 @@
 
   <!-- custom route css -->
   <link rel="stylesheet" href="../custom/css/route.css">
-
+ 
   <title>Route</title>
 </head>
 
@@ -160,6 +160,8 @@
               <div class="card-body custom-card-body">
                 <div class="form-group">
                     <label for="">Route name</label>
+                    <span class="pull-right sumOfDistance"></span><br>
+                    <span class="pull-right timeCompleted"></span>
                     <input type="text" id="txtSaveRouteName" class="form-control" placeholder="Enter route name">
                 </div>
                 <div class="sortable points" id="selectedPointsOnRoute">
@@ -252,6 +254,30 @@
       </div>
     </div>
 
+    <!-- route view map start -->
+    <div class="row">
+      <div class="col-12">
+        <div class="modal fade" id="modalViewMapRoute" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Route Map</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+               
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- route view map end -->
   </div>
 
   <!-- JQuery core -->
