--- a/html/guard.html
+++ b/html/guard.html
@@ -230,6 +230,39 @@
       </div>
     </div>
 
+    <!-- modal send message -->
+    <div class="row">
+      <div class="col-12">
+        <!-- Modal send message-->
+        <div class="modal fade" id="modalSendMessageGuard" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Send message</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                  <label for="">Guard name</label>
+                  <input type="text" disabled class="form-control" id="txtSendMessageGuardName">
+                </div>
+                <div class="form-group">
+                  <label for="">Message</label>
+                  <textarea id="textAreaSendMessage" cols="30" rows="10" class="form-control"></textarea>
+                </div>
+                <button class="btn btn-custom bg-main-color" id="btnSendMessageGuard">Send</button>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <!-- JQuery core -->
