--- a/html/points.html
+++ b/html/points.html
@@ -293,6 +293,9 @@
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
+  <!-- sweetalert -->
+  <script src="../plugins/sweetalert/js/sweetalert.min.js"></script>
+
   <!-- translate js -->
   <script src="../custom/js/translate.js"></script>
 
