updated page guard

--- a/html/guard.html
+++ b/html/guard.html
@@ -136,7 +136,7 @@
           </div>
           <div class="card-body custom-card-body">
             <div class="table-responsive">
-              <table class="table table-hover table-striped table-condensed text-center custom-table" id="tblGuards">
+              <table class="table table-hover table-striped table-condensed text-center custom-table min-height-table" id="tblGuards">
                 <!-- Points content here -->
               </table>
             </div>
@@ -262,7 +262,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <!-- JQuery core -->
@@ -286,6 +285,7 @@
   <!-- sweetalert js -->
   <script src="../plugins/sweetalert/js/sweetalert.min.js"></script>
 
+  <!-- leafletjs -->
   <script src="../plugins/leaflet/js/leaflet.js"></script>
 
   <!-- translate js plugins -->
