sweetalert route page

--- a/html/route.html
+++ b/html/route.html
@@ -298,12 +298,16 @@
   <!-- datetimepicker js -->
   <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
+  <!-- leaflet js -->
   <script src="../plugins/leaflet/js/leaflet.js"></script>
-  <script src="../plugins/leaflet/js/js/leaflet.js"></script>
 
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
+  <!-- sweetalert -->
+  <script src="../plugins/sweetalert/js/sweetalert.min.js"></script>
+
+  <!-- jqeryUI -->
   <script src="../plugins/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 
   <!-- translate language -->
