--- a/html/zone.html
+++ b/html/zone.html
@@ -28,12 +28,9 @@
   <link rel="stylesheet" href="../custom/css/mainView.css">
 
   <!-- leaflet css -->
-  <script src="../plugins/leaflet/css/leaflet.css"></script>
-  <!-- leaflet cdn backup -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
+  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet (1).css">
 
-  <title>Points</title>
+  <title>Zones</title>
 </head>
 
 <body>
@@ -128,16 +125,7 @@
               <div class="col-12">
                 <button class="btn btn-custom bg-main-color pull-right" id="btnPointsData">View</button>
                 <button class="btn btn-custom bg-main-color pull-right" id="btnMapAllPoints">Map</button>
-                <div class="dropdown pull-right">
-                  <button class="btn dropdown-toggle btn-custom bg-main-color" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Action
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <button class="dropdown-item btn btn-custom btn-success" type="button">insert</button>
-                    <button class="dropdown-item btn btn-custom btn-danger" type="button">Update</button>
-                  </div>
-                </div>
+                <button class="btn btn-custom bg-main-color pull-right" type="button" id="btnShowInsertZoneModal">Insert</button>
               </div>
             </div>
           </div>
@@ -150,12 +138,12 @@
         <div class="card card-incident">
           <div class="card-header bg-main-color custom-card-header">
             <h4>
-              <i class="fa fa-exclamation-triangle"></i> Points
+              <i class="fa fa-exclamation-triangle"></i> Zones
             </h4>
           </div>
           <div class="card-body custom-card-body">
             <div class="table-responsive">
-              <table class="table table-hover table-striped table-condensed text-center custom-table" id="tblPoints">
+              <table class="table table-hover table-striped table-condensed text-center custom-table" id="tblZones">
                 <!-- Points content here -->
               </table>
             </div>
@@ -164,19 +152,34 @@
         <!-- card Points end -->
       </div>
     </div>
+    <!-- insert zone modal -->
     <div class="row">
       <div class="col-12">
-        <div class="modal fade bd-example-modal-lg" id="modalMapPoint">
+        <div class="modal fade bd-example-modal-lg" id="modalInsertZone">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Point Map</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Insert Zone</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
-
+                <div class="row">
+                  <div class="col-md-8 insertZoneMap"></div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label for="">Zone name</label>
+                      <input type="text" placeholder="Enter zone name" id="txtInsertZoneName" class="form-control">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button class="btn btn-custom bg-main-color" id="btnClearZoneMap">Clear zone</button>
+                <button class="btn btn-custom bg-main-color" id="btnInsertZone">Save</button>
+                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
+                
               </div>
             </div>
           </div>
@@ -184,9 +187,10 @@
       </div>
     </div>
 
+    <!-- update zone modal -->
     <div class="row">
       <div class="col-12">
-        <div class="modal fade" id="modalInsertPoints">
+        <div class="modal fade" id="modalUpdateZone">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -198,18 +202,18 @@
               <div class="modal-body">
                 <form>
                   <div class="form-group">
-                    <label for="recipient-name" class="col-form-label">Recipient:</label>
-                    <input type="text" class="form-control" id="recipient-name">
+                    <label>Zone ID</label>
+                    <input type="text" class="form-control" id="txtUpdateZoneID" disabled>
                   </div>
                   <div class="form-group">
-                    <label for="message-text" class="col-form-label">Message:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
+                    <label>Zone name:</label>
+                    <input class="form-control" id="txtUpdateZoneName">
                   </div>
                 </form>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send message</button>
+                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
+                <button class="btn btn-custom bg-main-color" id="btnSaveUpdateZone">Save</button>
               </div>
             </div>
           </div>
@@ -241,18 +245,23 @@
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
+  <!-- sweetalert -->
+  <script src="../plugins/sweetalert/js/sweetalert.min.js"></script>
+
   <!-- translate js -->
   <script src="../custom/js/translate.js"></script>
 
-  <!-- leaflet js cdn backup -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
+  <!-- service js -->
+  <script src="../custom/js/service.js"></script>
+
+  <!-- validation js -->
+  <script src="../custom/js/validation.js"></script>
 
   <!-- custom main.js -->
   <script src="../custom/js/main.js"></script>
 
-  <!-- custom points js -->
-  <script src="../custom/js/points.js"></script>
+  <!-- custom zones js -->
+  <script src="../custom/js/zone.js"></script>
 
 </body>
 
